# geodesics-solver

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/: gcc-warnings.cmake
examples/: README.md  schwarzschild_plane.cpp
include/geodesics/: ftw.hpp  ling.hpp  solver.hpp
